Bug 586329 - Clear the defer submission state when submit button is removed from the form during its click event handler; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D119396